--- a/ansible/wordpress-nginx/roles/nginx/templates/default.conf
+++ b/ansible/wordpress-nginx/roles/nginx/templates/default.conf
@@ -1,7 +1,7 @@
 server {
         listen       {{ nginx_port }} default_server;
         server_name  {{ server_hostname }};
-        root /srv/wordpress/ ;
+        root {{ server_root }} ;
  
 	client_max_body_size 64M;
  
@@ -23,9 +23,17 @@ server {
                 try_files $uri =404;
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
                 fastcgi_index index.php;
-                fastcgi_pass  unix:/var/run/php-fpm/wordpress.sock;
+                fastcgi_pass  backend;
                 fastcgi_param   SCRIPT_FILENAME
                                 $document_root$fastcgi_script_name;
                 include       fastcgi_params;
         }
 }
+
+
+upstream backend {
+{% for backend in backends %}
+        server {{ backend }};
+{% endfor %}
+}
+
