--- a/ansible/wordpress-nginx/roles/nginx/tasks/main.yml
+++ b/ansible/wordpress-nginx/roles/nginx/tasks/main.yml
@@ -1,14 +1,18 @@
 ---
-- name: Install nginx
-  yum: name=nginx state=present
 
-- name: Copy nginx configuration for wordpress
+- name: NGINX repository definition
+  yum_repository:
+    name: nginx
+    description: Nginx repo - $basearch
+    baseurl: http://nginx.org/packages/centos/7/$basearch
+    gpgcheck: no
+
+- name: Install nginx
+  package: name=nginx state=present
+
+- name: Copy nginx configuration
   template: src=default.conf dest=/etc/nginx/conf.d/default.conf
   notify: restart nginx
-
-- name: insert firewalld rule for nginx
-  firewalld: port={{ nginx_port }}/tcp permanent=true state=enabled immediate=yes
-  ignore_errors: yes
 
 - name: http service state
   service: name=nginx state=started enabled=yes
