--- a/ansible/wordpress-nginx/group_vars/wordpress.yml
+++ b/ansible/wordpress-nginx/group_vars/wordpress.yml
@@ -1,5 +1,5 @@
 wp_server_root: /srv/
-wp_version: 4.6
+wp_archive: http://wordpress.org/wordpress-4.6.tar.gz
 
 # These are the WordPress database settings
 wp_db_host: "localhost"
