--- a/ansible/wordpress-nginx/roles/php-fpm/templates/wordpress.conf
+++ b/ansible/wordpress-nginx/roles/php-fpm/templates/wordpress.conf
@@ -1,7 +1,7 @@
 [wordpress]
 listen = /var/run/php-fpm/wordpress.sock
-listen.owner = nginx
-listen.group = nginx
+listen.owner = wordpress
+listen.group = wordpress
 listen.mode = 0660
 user = wordpress
 group = wordpress
